--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <div id="app"></div>
 
-<Script>
-  fetch('https://hrlink.bubbleapps.io/version-test/api/1.1/obj/link_event')
-  .then(res => res.json())
-  .then(json => console.log(json));
-</script>
