--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="https://cdn.zinggrid.com/zinggrid.min.js" defer></script>
+
 <div id="app"></div>
+
+<zing-grid
+  caption="link events"
+  search
+
+  pager
+  page-size="20"
+  layout="row"
+  editor-controls
+viewport-strop
+  layout-controls
+  src='https://hrlink.bubbleapps.io/version-test/api/1.1/obj/link_event'
+  >
+  <zg-data>
+    <zg-param name="searchKey" value="search"></zg-param>
+    <!-- define the main source for the API -->
+    <!-- <zg-param name="src" value="https://hrlink.bubbleapps.io/version-test/api/1.1/obj/link_event"></zg-param> -->
+
+    <!-- define the path in the JSON to get the array of results.
+        In this case it is body.results -->
+    <zg-param name="recordPath" value="response.results"></zg-param>
+
+    <!-- if loadByPage is set to true it will go to the
+      server for each new page of data -->
+    <zg-param name="loadByPage" value="true"></zg-param>
+
+    <!-- define the "page" query parameter -->
+    <zg-param name="pageKey" value="page"></zg-param>
+
+    <!-- Need to tell ZG how many records were returned so it knows
+        how to divide up the page-size -->
+    <zg-param name="countPath" value="count"></zg-param>
+
+    <!-- define the path in the result JSON to find next/prev urls -->
+    <zg-param name="nextPath" value="next"></zg-param>
+    <zg-param name="prevPath" value="previous"></zg-param>
+
+
+  </zg-data>
+</zing-grid>
+
 
