--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   editor-controls
 viewport-strop
   layout-controls
-  src='https://hrlink.bubbleapps.io/version-test/api/1.1/obj/link_event'
+  src='https://scrappy.bubbleapps.io/version-test/api/1.1/obj/link-event'
   >
   <zg-data>
     <zg-param name="searchKey" value="search"></zg-param>
