--- a/index.html
+++ b/index.html
@@ -15,29 +15,8 @@ viewport-strop
   src='https://scrappy.bubbleapps.io/version-test/api/1.1/obj/link-event'
   >
   <zg-data>
-    <zg-param name="searchKey" value="search"></zg-param>
-    <!-- define the main source for the API -->
-    <!-- <zg-param name="src" value="https://hrlink.bubbleapps.io/version-test/api/1.1/obj/link_event"></zg-param> -->
-
-    <!-- define the path in the JSON to get the array of results.
-        In this case it is body.results -->
+    <zg-param name="searchKey" value="search data"></zg-param>
     <zg-param name="recordPath" value="response.results"></zg-param>
-
-    <!-- if loadByPage is set to true it will go to the
-      server for each new page of data -->
-    <zg-param name="loadByPage" value="true"></zg-param>
-
-    <!-- define the "page" query parameter -->
-    <zg-param name="pageKey" value="page"></zg-param>
-
-    <!-- Need to tell ZG how many records were returned so it knows
-        how to divide up the page-size -->
-    <zg-param name="countPath" value="count"></zg-param>
-
-    <!-- define the path in the result JSON to find next/prev urls -->
-    <zg-param name="nextPath" value="next"></zg-param>
-    <zg-param name="prevPath" value="previous"></zg-param>
-
 
   </zg-data>
 </zing-grid>
